# halo2-step-by-step

./: .gitignore  README.md
0xPARC-halo2-learn-update/: Cargo.toml  README.md
0xPARC-halo2-learn-update/src/: is_zero.rs  mod.rs
0xPARC-halo2-learn-update/src/decompose/: decompose_range_check.rs  decompose_range_check_2.rs  mod.rs  table.rs
0xPARC-halo2-learn-update/src/fibonacci/: example1.rs
0xPARC-halo2-learn-update/src/range_check/: example1.rs  example2.rs  mod.rs
0xPARC-halo2-learn-update/src/range_check/example2/: table.rs
0xPARC-halo2-learn-update/src/range_check/example3/: table.rs
halo2-code-ref/src/range_check/: decompose_range_check.rs  example3.rs
halo2-code-ref/src/range_check/decompose_range_check/: table.rs
halo2-tutorials/: Cargo.toml  README.md  README_zh.md  info.toml
halo2-tutorials/src/: exercise.rs  lib.rs  main.rs  ui.rs  verify.rs
halo2-tutorials/src/chap_1/: exercise_1.rs  exercise_2.rs  exercise_3.rs  mod.rs  simple.rs
halo2-tutorials/src/chap_2/: custom_gate.rs  exercise_1.rs  exercise_2.rs  exercise_4.rs  exercise_5.rs  mod.rs  simple_chip.rs  tmp_exercise_6.rs
halo2-tutorials/src/chap_3/: README.md  circuit_1.rs  circuit_2.rs  exercise_6.rs  mod.rs
halo2-tutorials/src/chap_4/: README.md  circuit_1.rs  circuit_2.rs  circuit_3.rs  crcuit_3.rs  mod.rs  table_2.rs  table_3.rs
